gcc/testsuite/gfortran.dg/minmax_char_2.f90
! { dg-do compile }
! { dg-options "-std=f95" }
  print *, min("foo", "bar") ! { dg-error "Fortran 2003.* CHARACTER argument" }
  end
